[gd_scene load_steps=11 format=2]

[ext_resource path="res://ui/worldedit_title.png" type="Texture" id=1]
[ext_resource path="res://main.gd" type="Script" id=2]
[ext_resource path="res://ui/Menu.tscn" type="PackedScene" id=3]
[ext_resource path="res://menus/Worlds.tscn" type="PackedScene" id=4]
[ext_resource path="res://auto_processor.gd" type="Script" id=5]
[ext_resource path="res://menus/Settings.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui/twitter_logo.svg" type="Texture" id=8]
[ext_resource path="res://ui/youtube_logo.svg" type="Texture" id=9]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 0.886275, 0.701961, 0.576471, 1, 0.788235, 0.443137, 0.207843, 1 )

[sub_resource type="GradientTexture2D" id=2]
flags = 4
gradient = SubResource( 1 )
fill_from = Vector2( 0.8, 1.247 )
fill_to = Vector2( 0.8, -0.145 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 2 )
expand = true

[node name="MainUI" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = 8.0

[node name="Title" type="TextureRect" parent="MainUI"]
margin_right = 1014.0
margin_bottom = 161.0
size_flags_vertical = 3
size_flags_stretch_ratio = 1.58
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="Padding" type="Control" parent="MainUI"]
margin_top = 165.0
margin_right = 1014.0
margin_bottom = 227.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.6

[node name="Menus" type="HBoxContainer" parent="MainUI"]
margin_top = 231.0
margin_right = 1014.0
margin_bottom = 362.0
size_flags_horizontal = 3
alignment = 1

[node name="Padding" type="Control" parent="MainUI/Menus"]
margin_right = 350.0
margin_bottom = 131.0
size_flags_horizontal = 3

[node name="VBox" type="VBoxContainer" parent="MainUI/Menus"]
margin_left = 354.0
margin_right = 659.0
margin_bottom = 131.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.87

[node name="WorldsButton" type="Button" parent="MainUI/Menus/VBox"]
margin_right = 305.0
margin_bottom = 41.0
focus_neighbour_bottom = NodePath("../SettingsButton")
size_flags_vertical = 3
text = "Worlds"

[node name="SettingsButton" type="Button" parent="MainUI/Menus/VBox"]
margin_top = 45.0
margin_right = 305.0
margin_bottom = 86.0
focus_neighbour_top = NodePath("../WorldsButton")
focus_neighbour_bottom = NodePath("../AssetsButton")
size_flags_vertical = 3
text = "Settings"

[node name="AssetsButton" type="Button" parent="MainUI/Menus/VBox"]
margin_top = 90.0
margin_right = 305.0
margin_bottom = 131.0
focus_neighbour_top = NodePath("../SettingsButton")
size_flags_vertical = 3
disabled = true
text = "Asset Store (Soonâ„¢)"

[node name="Padding2" type="Control" parent="MainUI/Menus"]
margin_left = 663.0
margin_right = 1014.0
margin_bottom = 131.0
size_flags_horizontal = 3

[node name="Padding2" type="Control" parent="MainUI"]
margin_top = 366.0
margin_right = 1014.0
margin_bottom = 555.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.85

[node name="Extras" type="HBoxContainer" parent="MainUI"]
margin_top = 559.0
margin_right = 1014.0
margin_bottom = 602.0
size_flags_stretch_ratio = 1.29

[node name="Creator" type="Label" parent="MainUI/Extras"]
margin_top = 3.0
margin_right = 133.0
margin_bottom = 43.0
rect_min_size = Vector2( 0, 40 )
size_flags_vertical = 12
text = "Created by SIsilicon"
valign = 1

[node name="Twitter" type="Button" parent="MainUI/Extras"]
margin_left = 137.0
margin_right = 171.0
margin_bottom = 43.0
icon = ExtResource( 8 )
flat = true
align = 0

[node name="Youtube" type="Button" parent="MainUI/Extras"]
margin_left = 175.0
margin_right = 216.0
margin_bottom = 43.0
icon = ExtResource( 9 )
flat = true
align = 0

[node name="Version" type="Label" parent="MainUI/Extras"]
margin_left = 220.0
margin_top = 3.0
margin_right = 1014.0
margin_bottom = 43.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
size_flags_vertical = 12
text = "0.7.1"
align = 2
valign = 1

[node name="WorldsMenu" parent="." instance=ExtResource( 3 )]
visible = false
ui = ExtResource( 4 )
menu_name = "Worlds"

[node name="SettingsMenu" parent="." instance=ExtResource( 3 )]
visible = false
ui = ExtResource( 6 )
menu_name = "Settings"

[node name="Tween" type="Tween" parent="."]

[node name="AutoProcessor" type="Node" parent="."]
script = ExtResource( 5 )

[connection signal="pressed" from="MainUI/Menus/VBox/WorldsButton" to="." method="_on_WorldsButton_pressed"]
[connection signal="pressed" from="MainUI/Menus/VBox/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="MainUI/Extras/Twitter" to="." method="_on_Twitter_pressed"]
[connection signal="pressed" from="MainUI/Extras/Youtube" to="." method="_on_Youtube_pressed"]
[connection signal="back_pressed" from="WorldsMenu" to="." method="_on_WorldsMenu_back_pressed"]
[connection signal="back_pressed" from="SettingsMenu" to="." method="_on_SettingsMenu_back_pressed"]
